# visitor-pattern

./: CMakeLists.txt  add.hpp  base.hpp  div.hpp  iterator.hpp  main.cpp  mult.hpp  op.hpp  pow.hpp  rand.hpp  sub.hpp  visitor.cpp  visitor.hpp  visitorLatex.hpp
tests/: test.hpp  unit_test.cpp
